--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,14 +22,34 @@ services:
         aliases:
           - redis
 
-# networks:
-#   app_net:
-#     driver: bridge
-#     enable_ipv6: false
-#     ipam:
-#       driver: default
-#       config:
-#         - subnet: 172.16.238.0/24
-#           gateway: 172.16.238.1
+  drone-server:
+    image: drone/drone:1.0.0-rc.1
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./drone:/var/lib/drone
+    restart: always
+    environment:
+      - DRONE_GITHUB_SERVER=https://github.com
+      - DRONE_GITHUB_CLIENT_ID=8d3afffea9b992482881
+      - DRONE_GITHUB_CLIENT_SECRET=1c50744151ad1b71e7523bcfbb9cbd176f3c9177
+      - DRONE_SECRET=123456
+      - DRONE_RUNNER_CAPACITY=2
+      - DRONE_TLS_AUTOCERT=false
+
+  drone-agent:
+    image: drone/agent:1.0.0-rc.1
+    restart: always
+    depends_on:
+      - drone-server
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - DRONE_RPC_SERVER=drone-server
+      - DRONE_RPC_SECRET=123456
+      - DRONE_RUNNER_CAPACITY=2
+      - DRONE_RUNNER_NAME=localhost
+
 networks:
   bitmap:
